--- a/package.json
+++ b/package.json
@@ -1,23 +1,38 @@
 {
-  "name": "todo-extension",
+  "name": "todo-list",
   "version": "1.0.0",
-  "description": "Is just a simple to-do chrome extesion",
+  "description": "",
   "main": "index.js",
+  "private": true,
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "npm run development",
+    "development": "mix",
+    "watch": "mix watch",
+    "watch-poll": "mix watch -- --watch-options-poll=1000",
+    "hot": "mix watch --hot",
+    "prod": "npm run production",
+    "production": "mix --production"
+  },
+  "devDependencies": {
+    "axios": "^1.4.0",
+    "cross-env": "^7.0",
+    "laravel-mix": "^6.0.43",
+    "lodash": "^4.17.21",
+    "resolve-url-loader": "^3.1.2",
+    "sass": "^1.32.0",
+    "sass-loader": "^8.0.2"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/AlexFer-123/todo-extension.git"
   },
-  "keywords": [],
   "author": "",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/AlexFer-123/todo-extension/issues"
   },
   "homepage": "https://github.com/AlexFer-123/todo-extension#readme",
-  "devDependencies": {
-    "laravel-mix": "^6.0.49"
+  "dependencies": {
+    "typed.js": "^2.0.12"
   }
 }
