--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "lodash": "^4.17.21",
     "resolve-url-loader": "^3.1.2",
     "sass": "^1.32.0",
-    "sass-loader": "^8.0.2"
+    "sass-loader": "^8.0.2",
+    "vue-loader": "15.9.8",
+    "vue-template-compiler": "^2.7.16"
   },
   "repository": {
     "type": "git",
@@ -33,6 +35,7 @@
   },
   "homepage": "https://github.com/AlexFer-123/todo-extension#readme",
   "dependencies": {
-    "typed.js": "^2.0.12"
+    "typed.js": "^2.0.12",
+    "vue": "^2.7.16"
   }
 }
