base project css

--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
   "homepage": "https://github.com/AlexFer-123/todo-extension#readme",
   "dependencies": {
     "typed.js": "^2.0.12",
-    "vue": "^2.7.16"
+    "vue": "^2.7.16",
+    "vuetify": "^2.7.2"
   }
 }
