--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "typed.js": "^2.0.12",
     "vue": "^2.7.16",
     "vue-router": "^3.6.5",
-    "vuetify": "^2.7.2"
+    "vuetify": "^2.7.2",
+    "vuex": "^3.6.2"
   }
 }
